--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>fluent</title>
+    <meta property="og:title" content="fluent" />
+    <meta property="og:image" content="%PUBLIC_URL%/fluent-social.png" />
+    <meta property="og:description" content="A full stack application where the user can practice learning a language with the spaced repetition revision technique." />
+    <meta property="og:url" content="//fluent-live.vercel.app" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
